[package]
name = "dates"
version = "0.4.0"
edition = "2021"


[dependencies]
uuid = { version = "1.6.1", features = ["v4"] }
actix-web = "4.4.0"
anyhow = "1.0.75"
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0.192", features = ["serde_derive", "derive"] }
tera = "1.19.1"
tokio = "1.34.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
shuttle-actix-web = "0.35.2"
shuttle-runtime = "0.35.2"
shuttle-secrets = "0.35.2"
sqlx = { version = "0.7.3", features = [
  "macros",
  "postgres",
  "bigdecimal",
  "time",
  "chrono",
  "uuid",
] }
shuttle-shared-db = { version = "0.35.2", features = ["postgres"] }
async-traits = "0.0.0"
toml = "0.8.8"
chrono = { version = "0.4.31", features = ["serde"] }
thiserror = "1.0.51"
argon2 = { version = "0.5.2", features = ["std"] }
secrecy = { version = "0.8.0", features = ["serde"] }
rand = "0.8.5"
